// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createChatJobs() when useReplyAPI 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/reply",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/reply",
  },
  Object {
    "body": Object {
      "id": 7,
    },
    "channelUid": "line:default:user:john",
    "entry": "bar",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 8,
        },
      ],
      "replyToken": "__REPLY_TOKEN__",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/reply",
  },
  Object {
    "body": Object {
      "id": 9,
    },
    "channelUid": "line:default:user:john",
    "entry": "baz",
  },
]
`;

exports[`createChatJobs() work 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "to": "john",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/push",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ],
      "to": "john",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/push",
  },
  Object {
    "body": Object {
      "id": 7,
    },
    "channelUid": "line:default:user:john",
    "entry": "bar",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 8,
        },
      ],
      "to": "john",
    },
    "channelUid": "line:default:user:john",
    "entry": "message/push",
  },
  Object {
    "body": Object {
      "id": 9,
    },
    "channelUid": "line:default:user:john",
    "entry": "baz",
  },
]
`;

exports[`createMulticastJobs() create job of multicast api 1`] = `
Array [
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 0,
        },
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
        Object {
          "id": 4,
        },
      ],
      "to": Array [
        "foo",
        "bar",
        "baz",
      ],
    },
    "entry": "message/multicast",
  },
  Object {
    "body": Object {
      "messages": Array [
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
        Object {
          "id": 7,
        },
      ],
      "to": Array [
        "foo",
        "bar",
        "baz",
      ],
    },
    "entry": "message/multicast",
  },
]
`;
